refactored code into different modules and added swagger route tagging
